WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179510
Fix a few FIXMEs in WebFrameIOS
https://bugs.webkit.org/show_bug.cgi?id=179510
Summary
Fix a few FIXMEs in WebFrameIOS
Megan Gardner
Reported
2017-11-09 16:02:31 PST
Fix a few FIXMEs in WebFrameIOS
Attachments
Patch
(3.05 KB, patch)
2017-11-09 16:11 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(2.48 KB, patch)
2017-11-10 14:14 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-elcapitan
(2.32 MB, application/zip)
2017-11-10 15:01 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-elcapitan-wk2
(2.60 MB, application/zip)
2017-11-10 16:40 PST
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2017-11-09 16:11:34 PST
Created
attachment 326503
[details]
Patch
Darin Adler
Comment 2
2017-11-10 10:00:25 PST
Comment on
attachment 326503
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=326503&action=review
> Source/WebKitLegacy/ios/ChangeLog:9 > + I don't see that it's used anywhere, but no reason to leave things cluttered.
This does not seem like good rationale. If this method is definitely not used or this value is definitely not used, then it’s fine to change the code. If it is used, then we should not change it unless we’ve tested what effect the change has. You wrote a comment here “I don’t see that it's used” but I can’t figure out whether that means we are sure this change will have no effect. But to state the obvious, the behavior of the software is more important than the messiness of a FIXME comment.
Megan Gardner
Comment 3
2017-11-10 14:14:54 PST
Created
attachment 326630
[details]
Patch
Build Bot
Comment 4
2017-11-10 15:01:25 PST
Comment on
attachment 326630
[details]
Patch
Attachment 326630
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/5182542
New failing tests: webarchive/adopt-inline-styled-node-webarchive.html
Build Bot
Comment 5
2017-11-10 15:01:26 PST
Created
attachment 326636
[details]
Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 6
2017-11-10 16:40:35 PST
Comment on
attachment 326630
[details]
Patch
Attachment 326630
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5183702
New failing tests: http/wpt/web-animations/timing-model/animations/updating-the-finished-state.html
Build Bot
Comment 7
2017-11-10 16:40:37 PST
Created
attachment 326658
[details]
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Megan Gardner
Comment 8
2017-11-10 16:43:01 PST
This is literally only touching iOS code, these test cannot be broken due to this change.
WebKit Commit Bot
Comment 9
2017-11-11 18:46:35 PST
Comment on
attachment 326630
[details]
Patch Clearing flags on attachment: 326630 Committed
r224734
: <
https://trac.webkit.org/changeset/224734
>
WebKit Commit Bot
Comment 10
2017-11-11 18:46:36 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2017-11-15 09:45:16 PST
<
rdar://problem/35562363
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug