Fix a FIXMEs in WebFrameIOS https://bugs.webkit.org/show_bug.cgi?id=179510

Reviewed by Darin Adler.

Removed a function that does nothing and is not needed or used anywhere, linked to a radar that is in verify.
This is just some easy cleanup I found while investigating other things.

* WebCoreSupport/WebFrameIOS.h:
* WebCoreSupport/WebFrameIOS.mm:
(-[WebFrame imageForNode:allowDownsampling:drawContentBehindTransparentNodes:]): Deleted.


Canonical link: https://commits.webkit.org/195622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224734 268f45cc-cd09-0410-ab3c-d52691b4dbfc